# ARIAC_tutorials

./: CMakeLists.txt  README.md  package.xml  requirements.txt
ariac_tutorials/: competition_interface.py  create_object_yaml.py  utils.py
config/: collision_object_info.yaml  moveit_config.yaml  sensors.yaml
launch/: tutorial.launch.py  tutorial10.launch.py  tutorial_10.launch.py  tutorial_6.launch.py  tutorial_7.launch.py  tutorial_8.launch.py
scripts/: tutorial_1.py  tutorial_10.py  tutorial_11.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_5.py  tutorial_6.py  tutorial_7.py  tutorial_8.py  tutorial_9.py
