<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ariac_tutorials</name>
  <version>2024.1.0</version>
  <description>ARIAC tutorials</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ariac_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>moveit_py</depend>
  <depend>moveit_core</depend>
  
  <exec_depend>moveit</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
